MIL-36 fix small bugs in menu ** Bring brand bar to top of stack ** Remove styling of mobile toggle button ** Remove extra space on menu items ** Add inverted user icon

--- a/app/css/brandbar.scss
+++ b/app/css/brandbar.scss
@@ -2,8 +2,10 @@
 .brandbar {
 	height: 8px;
 	width: 100%;
-	z-index: 200;
+	z-index: 1000000;
+	position: absolute;
 }
+
 .brandbar span {
 	height: 100%;
 	float: left;
