--- a/app/css/nav.scss
+++ b/app/css/nav.scss
@@ -14,6 +14,14 @@
   transition: all 0.5s;
 }
 
+header.show .container {
+  padding-top: 10px;
+  margin-top: -10px;
+  .nav {
+  // margin-top: 10px;
+  }
+}
+
 #container.show {
   position: fixed;
   top: 10%;
@@ -37,6 +45,8 @@
 }
 
 /******************** Mobile ********************/
+
+
 .navbar-brand {
   padding: 15px 10px 0px 10px;
 }
@@ -47,6 +57,7 @@
   transform: translatex(0%);
   -webkit-transition: all 0.563s;
   transition: all 0.563s;
+  margin-top: 10px;
 }
 
 .navbar-header.show {
@@ -56,6 +67,7 @@
   transform: translatex(64%);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  margin-top: 10px;
   .navbar-brand.logo {
     width: 80%;
   }
@@ -67,12 +79,11 @@
 .nav__side--toggle {
   position: relative;
   padding: 9px 10px;
-  margin-top: 8px;
+  margin-top: 5px;
   margin-bottom: 0px;
-  background-color: #fff;
+  background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
-  border-color: #ddd;
   z-index: 10000;
   border-radius: 4px;
 }
@@ -93,6 +104,7 @@
   height: 100%;
   background-color: #f9f9f9;
   padding-right: 0;
+  padding-top: 10px;
   -webkit-transform: translatex(-115%);
   transform: translatex(-115%);
   -webkit-transition: all 0.5s;
@@ -215,7 +227,7 @@
     color: #fff;
     display: inline-block;
     > .navbar__dropdown--subnav {
-      top: 80px;
+      top: 100px;
       opacity: 1;
       padding: 0;
       position: absolute;
@@ -238,7 +250,7 @@
 .navbar__dropdown--subnav--item {
   display: inline-block;
   padding: 10px 15px 10px 0;
-  max-width: 250px;
+  vertical-align: top;
   &:first-child {
     background: #eee;
   }
@@ -273,6 +285,8 @@
 
 .navbar__dropdown--subnav__list{
   padding: 0;
+  width: auto;
+  float: none;
 }
 
 .navbar__dropdown--subnav__list--item {
@@ -280,6 +294,8 @@
   padding: 5px 7px 5px 25px;
   border: none;
   background: none;
+  display: block;
+  width: auto;
   &:hover a {
     color: #b05c30;
     text-decoration: underline;
